[workspace]
resolver = "2"
members = [
    "cvlr-solana"
]

[workspace.package]
version = "0.3.0"
authors = ["Certora"]
description = "Certora Verification Language for Rust with Solana"
documentation = "https://certora.com"

[workspace.dependencies]
proc-macro2 = "1"
quote = "1"
syn = "2"
macrotest = "1"
trybuild = "1"

cvlr-asserts = { version=">= 0.4.0, <1" }
cvlr-mathint = { version=">= 0.4.0, <1" }
cvlr-nondet = { version=">= 0.4.0, <1" }
cvlr-log = { version=">= 0.4.0, <1" }
