[package]
name = "cvlr-solana"
description.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
authors.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
default = []
rt = ["cvlr-nondet/rt", "cvlr-asserts/rt", "cvlr-mathint/rt"]

[dependencies]
solana-program = ">=1.18, <2.2"
spl-token = ">=4.0.3, <8"
spl-token-2022 = ">=3.0.5, <8"
arrayref = "0.3"

cvlr-asserts = { workspace = true }
cvlr-nondet = { workspace = true }
cvlr-mathint = { workspace = true }
cvlr-log = { workspace = true }
