[package]
name = "cvlr-solana"
description.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
authors.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
default = []
rt = ["cvlr-nondet/rt", "cvlr-asserts/rt", "cvlr-mathint/rt"]

[dependencies]
solana-program = "1.18"
spl-token = { version = "4", features = ["no-entrypoint"] }
spl-token-2022 = { version = "3", features = ["no-entrypoint"] }
arrayref = "0.3"

cvlr-asserts = { workspace = true }
cvlr-nondet = { workspace = true }
cvlr-mathint = { workspace = true }
cvlr-log = { workspace = true }
cvlr-early-panic = { version=">= 0.4.0, <1" }
cvlr-macros = { version=">= 0.4.0, <1" }
